--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,8 @@ on:
 
 jobs:
   tests:
-    # Разворачиваем окружение:
     runs-on: ubuntu-latest
+    # Блок services аналогичен docker-compose.yml
     services:
       postgres:
         image: postgres:13.10
@@ -24,28 +24,20 @@ jobs:
         # Если её не будет, то тесты могут запуститься раньше, чем сервер PostgreSQL
         # В результате тесты опять решат, что базы нет, — и упадут
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
-
     steps:
-    # Копируем код проекта
-    - name: Check out code
-      uses: actions/checkout@v3
-    # Устанавливаем Python с помощью action
+    - uses: actions/checkout@v3
     - name: Set up Python
       uses: actions/setup-python@v4
-    # В action setup-python@v4 передаём параметр — версию Python
       with:
         python-version: 3.9
-    # Обновляем pip, устанавливаем flake8 и flake8-isort, 
-    # устанавливаем зависимости проекта
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip 
         pip install flake8==6.0.0 flake8-isort==6.0.0
-        pip install -r ./backend/requirements.txt
-    # Запускаем flake8
+        pip install -r ./backend/requirements.txt 
+    # Этот шаг дополним переменными для доступа к БД
     - name: Test with flake8 and django tests
-      # Вызываем flake8 и указываем ему,
-      # что нужно проверить файлы только в папке backend/
       # Добавляем env-переменные для доступа к БД
       env:
         POSTGRES_USER: django_user
@@ -59,4 +51,3 @@ jobs:
         python -m flake8 backend/
         cd backend/
         python manage.py test
-      
